Improve knowledge of React, remove Spring

--- a/index.html
+++ b/index.html
@@ -78,11 +78,8 @@
                 <li class="yellow">
                     <img src="img/icons/tools/postgresql.png" alt="" >
                 </li>
-                <li class="red">
+                <li class="yellow">
                     <img src="img/icons/tools/react.png" alt="" >
-                </li>
-                <li class="red">
-                    <img src="img/icons/tools/spring.png" alt="" >
                 </li>
             </ul>
         </div>
