--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li class="green">
                     <img src="img/icons/languages/javascript.png" alt="" >
                 </li>
-                <li class="yellow">
+                <li class="green">
                     <img src="img/icons/languages/typescript.png" alt="" >
                 </li>
                 <li class="yellow">
