Add Redis and Svelte

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                 <li class="green">
                     <img src="img/icons/tools/jetbrains.png" alt="" >
                 </li>
+                <li class="green">
+                    <img src="img/icons/tools/redis.png" alt="" >
+                </li>
                 <li class="yellow">
                     <img src="img/icons/tools/vscode.png" alt="" >
                 </li>
@@ -80,6 +83,9 @@
                 </li>
                 <li class="yellow">
                     <img src="img/icons/tools/react.png" alt="" >
+                </li>
+                <li class="yellow">
+                    <img src="img/icons/tools/svelte.png" alt="" >
                 </li>
             </ul>
         </div>
