--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                     <img src="img/icons/tools/jetbrains.png" alt="" >
                 </li>
                 <li class="green">
+                    <img src="img/icons/tools/docker.png" alt="" >
+                </li>
+                <li class="green">
                     <img src="img/icons/tools/redis.png" alt="" >
                 </li>
                 <li class="yellow">
