--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+    <meta name="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="manifest" href="manifest.json">
+
+    <meta name="image" content="https://mrsterdy.ru/img/avatar.png">
+    <meta name="description" content="A back-end developer from Russia that makes things for the web">
+
+    <meta property="og:title" content="MrSterdy">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://mrsterdy.ru/img/avatar.png">
+    <meta property="og:url" content="https://mrsterdy.ru">
+    <meta property="og:description" content="A back-end developer from Russia that makes things for the web">
+
     <title>MrSterdy</title>
 
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
