--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta name="image" content="https://mrsterdy.ru/img/avatar.png">
     <meta name="description" content="A back-end developer from Russia that makes things for the web">
 
-    <meta property="og:title" content="MrSterdy">
+    <meta property="og:site_name" content="MrSterdy">
+    <meta property="og:title" content="Have a good one!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://mrsterdy.ru/img/avatar.png">
     <meta property="og:url" content="https://mrsterdy.ru">
